# demo-projects

./: .gitignore  LICENSE.md  README.md
multiple-targets/: meson.build  say_hello.c  say_hi.c  say_howdy.c
multiple-targets/common/: common.c  common.h  meson.build
simple/: meson.build  simple.cpp
subprojects/: main.cpp  meson.build
subprojects/subprojects/: fmt.wrap
